@@ -1,58 +1,75 @@
 package com.noCountry.petConnect.infra.errores;
 
-import jakarta.persistence.EntityNotFoundException;
-import jakarta.validation.ValidationException;
+import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
-import org.springframework.http.converter.HttpMessageNotReadableException;
-import org.springframework.validation.FieldError;
 import org.springframework.web.bind.MethodArgumentNotValidException;
 import org.springframework.web.bind.annotation.ExceptionHandler;
 import org.springframework.web.bind.annotation.RestControllerAdvice;
+import org.springframework.web.client.HttpClientErrorException;
+
+import jakarta.persistence.EntityNotFoundException;
+import jakarta.validation.ValidationException;
+import org.springframework.http.converter.HttpMessageNotReadableException;
+import org.springframework.security.authentication.BadCredentialsException;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @RestControllerAdvice
 public class ManejadorDeErrores {
 
-    @ExceptionHandler(EntityNotFoundException.class)
-    public ResponseEntity tratarError404(){
-        return ResponseEntity.notFound().build();
-    }
-
     @ExceptionHandler(MethodArgumentNotValidException.class)
-    public ResponseEntity tratarError400(MethodArgumentNotValidException e){
-        var errores = e.getFieldErrors().stream().map(DatosErrorValidacion::new).toList();
-        return ResponseEntity.badRequest().body(errores);
+    public ResponseEntity<ErrorResponse> handleValidationExceptions(MethodArgumentNotValidException ex) {
+        List<String> errores = ex.getBindingResult()
+                .getFieldErrors()
+                .stream()
+                .map(error -> error.getField() + ": " + error.getDefaultMessage())
+                .collect(Collectors.toList());
+
+        ErrorResponse errorResponse = new ErrorResponse(HttpStatus.BAD_REQUEST, "Validación fallida", errores);
+        return new ResponseEntity<>(errorResponse, errorResponse.status());
     }
 
-    private record DatosErrorValidacion(String campo, String error){
-        public DatosErrorValidacion(FieldError error) {
-            this(error.getField(), error.getDefaultMessage());
-        }
+    @ExceptionHandler(EntityNotFoundException.class)
+    public ResponseEntity<ErrorResponse> handleEntityNotFoundException(EntityNotFoundException ex) {
+        ErrorResponse errorResponse = new ErrorResponse(HttpStatus.NOT_FOUND, ex.getMessage());
+        return new ResponseEntity<>(errorResponse, errorResponse.status());
     }
 
     @ExceptionHandler(HttpMessageNotReadableException.class)
-    public ResponseEntity errorHandlerJsonParseError(Exception e){
-        return ResponseEntity.badRequest().body(e.getMessage());
+    public ResponseEntity<ErrorResponse> handleHttpMessageNotReadableException(HttpMessageNotReadableException ex) {
+        ErrorResponse errorResponse = new ErrorResponse(HttpStatus.BAD_REQUEST, "Error en el formato del JSON");
+        return new ResponseEntity<>(errorResponse, errorResponse.status());
     }
 
     @ExceptionHandler(ValidationException.class)
-    public ResponseEntity errorHandlerValidacionesDeNegocio(Exception e){
-        return ResponseEntity.badRequest().body(e.getMessage());
+    public ResponseEntity<ErrorResponse> handleValidationException(ValidationException ex) {
+        ErrorResponse errorResponse = new ErrorResponse(HttpStatus.BAD_REQUEST, ex.getMessage());
+        return new ResponseEntity<>(errorResponse, errorResponse.status());
+    }
+
+    @ExceptionHandler(BadCredentialsException.class)
+    public ResponseEntity<ErrorResponse> handleBadCredentialsException(BadCredentialsException ex) {
+        ErrorResponse errorResponse = new ErrorResponse(HttpStatus.UNAUTHORIZED, "Credenciales inválidas");
+        return new ResponseEntity<>(errorResponse, errorResponse.status());
     }
 
     @ExceptionHandler(ApplicationException.class)
-    public ResponseEntity errorHandlerApplication(ApplicationException e) {
-        var error = e.getCampo() != null?
-                new ErrorDeValidacionConCampo(e.getCampo(), e.getMessage()):
-                new ErrorDeValidacionSinCampo(e.getMessage());
-        return ResponseEntity.badRequest().body(List.of(error));
+    public ResponseEntity<ErrorResponse> handleApplicationException(ApplicationException ex) {
+        String message = ex.getCampo() != null ? ex.getCampo() + ": " + ex.getMessage() : ex.getMessage();
+        ErrorResponse errorResponse = new ErrorResponse(HttpStatus.CONFLICT, message);
+        return new ResponseEntity<>(errorResponse, errorResponse.status());
     }
 
-    public record ErrorDeValidacionConCampo(String campo, String error){}
-    public record ErrorDeValidacionSinCampo(String error){}
+    @ExceptionHandler(HttpClientErrorException.class)
+    public ResponseEntity<ErrorResponse> handleHttpClientErrorException(HttpClientErrorException ex) {
+        ErrorResponse errorResponse = new ErrorResponse((HttpStatus) ex.getStatusCode(), ex.getStatusText());
+        return new ResponseEntity<>(errorResponse, errorResponse.status());
+    }
 
-
-
-
+    public record ErrorResponse(HttpStatus status, String message, List<String> errors) {
+        public ErrorResponse(HttpStatus status, String message) {
+            this(status, message, null);
+        }
+    }
 }
